src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  -ms-overflow-style: none;
}
::-webkit-scrollbar {
  display: none;
}

:root {
  --primary: @apply bg-primary;
}

html,
body,
.root {
  height: 100%;
  @apply bg-background;
}

span {
  white-space: pre-wrap;
  display: block;
}

@layer components {
  .sansHeading {
    font-family: Inter;
    letter-spacing: -0.07em;
    font-weight: 600;
    line-height: 1.1;
    text-transform: uppercase;
  }
  .serifHeading {
    font-family: Josefin Slab;
    letter-spacing: -0.05em;
    font-weight: 400;
    line-height: 1.1;
    text-transform: uppercase;
  }
  .sansBody {
    font-family: Inter;
    letter-spacing: -0.02em;
    font-weight: 400;
    line-height: 1.3;
  }
  .gradientMask {
    /* Fallback: Set a background color. */
    @apply bg-textPrimary;

    /* Create the gradient. */
    @apply bg-gradient-to-tr;
    @apply to-secondary;
    @apply from-tertiary;

    /* Set the background size and repeat properties. */
    background-size: 100%;
    background-repeat: repeat;

    /* Use the text as a mask for the background. */
    /* This will show the gradient as a text color rather than element bg. */
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-background-clip: text;
    -moz-text-fill-color: transparent;
  }
}

